--- a/package.json
+++ b/package.json
@@ -4,21 +4,29 @@
   "license": "MIT",
   "version": "0.1.0",
   "description": "A toggle UI element.",
-  "keywords": ["toggle", "ui", "checkbox"],
+  "keywords": [
+    "toggle",
+    "ui",
+    "checkbox"
+  ],
   "dependencies": {
     "component-classes": "1.2.4",
-    "domify": "^1.3.3",
     "component-emitter": "1.2.0",
     "component-events": "1.0.9",
     "component-value": "1.1.0",
+    "domify": "^1.3.3",
     "prevent": "git://github.com/slifszyc/prevent",
-    "stop": "git://github.com/slifszyc/stop"
+    "stop": "git://github.com/slifszyc/stop",
+    "stringify": "^3.1.0"
   },
   "browser": {
     "classes": "component-classes",
     "emitter": "component-emitter",
     "events": "component-events",
     "value": "component-value"
+  },
+  "browserify": {
+    "transform": ["stringify"]
   },
   "main": "lib/index.js"
 }
